# fin-sdk-sw

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.template  Makefile  README.md  revision.js  revision.py  version.py
examples/js/properties/: Dockerfile.template  package.json  properties.js
examples/js/revision/: Dockerfile.template  package.json  revision.js
examples/py/properties/: Dockerfile.template  properties.py
examples/py/revision/: Dockerfile.template  revision.py
fin-base/: Cargo.toml
fin-base/src/: ethtool.rs
fin-cli/: Cargo.toml
fin-cli/src/: command.rs  main.rs
fin-lib/: Cargo.toml
fin-lib/src/: eeprom.rs  ethtool.rs  i2c.rs  lib.rs  version.rs
fin-sdk/: Cargo.toml
fin-sdk/src/: lib.rs
include/fin/: client.h  fin.h
src/: command.rs  gi.rs  i2c.rs  lib.rs  main.rs  version.rs
