[package]
name = "fin"
version = "0.1.0"
authors = ["Zahari Petkov <zahari@balena.io>"]
description = "balenaFin SDK"
license = "Apache-2.0"
edition = "2018"

[dependencies.clap]
version = "2.33"
default-features = false

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
