[package]
name = "fin-sdk"
version = "0.2.0"
authors = ["Zahari Petkov <zahari@balena.io>"]
description = "balenaFin SDK"
license = "Apache-2.0"
edition = "2018"

[dependencies]
fin-lib = { version = "*", path = "../fin-lib" }
glib-sys = "0.10"
gobject-sys = "0.10"
glib = "0.10"

[lib]
crate-type = ["cdylib"]
name = "fin"
